# wasm-component-example

./: .gitignore  Cargo.toml  README.md  host.js  index.js  package-lock.json  package.json
.github/.workflows/: build.yml
src/: lib.rs
wit/: world.wit
